# pytket-qir

./: .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build_and_test.yml  docs.yml  release.yml
docs/: api.rst  changelog.rst  index.rst
pytket/qir/: _metadata.py
tests/: api_test.py  barrier_test.py  conditional_test.py  qasm_test.py  rng_test.py
tests/qir/: test_bitreg_as_bit_1-QIRProfile.ADAPTIVE.ll  test_bitreg_as_bit_1-QIRProfile.AZUREADAPTIVE.ll  test_bitreg_as_bit_1-QIRProfile.PYTKET.ll  test_bitreg_as_bit_2-QIRProfile.ADAPTIVE.ll  test_bitreg_as_bit_2-QIRProfile.AZUREADAPTIVE.ll  test_bitreg_as_bit_2-QIRProfile.PYTKET.ll  test_bitreg_as_bit_3-QIRProfile.ADAPTIVE.ll  test_bitreg_as_bit_3-QIRProfile.AZUREADAPTIVE.ll  test_bitreg_as_bit_3-QIRProfile.PYTKET.ll  test_bitreg_as_bit_4-QIRProfile.ADAPTIVE.ll  test_bitreg_as_bit_4-QIRProfile.AZUREADAPTIVE.ll  test_bitreg_as_bit_4-QIRProfile.PYTKET.ll  test_bitreg_as_bit_5-QIRProfile.ADAPTIVE.ll  test_bitreg_as_bit_5-QIRProfile.AZUREADAPTIVE.ll  test_bitreg_as_bit_5-QIRProfile.PYTKET.ll  test_bitreg_as_bit_6-QIRProfile.ADAPTIVE.ll  test_bitreg_as_bit_6-QIRProfile.AZUREADAPTIVE.ll  test_bitreg_as_bit_6-QIRProfile.PYTKET.ll  test_bitreg_as_bit_7-QIRProfile.ADAPTIVE.ll  test_bitreg_as_bit_7-QIRProfile.AZUREADAPTIVE.ll  test_bitreg_as_bit_7-QIRProfile.PYTKET.ll  test_bitreg_as_bit_8-QIRProfile.ADAPTIVE.ll  test_bitreg_as_bit_8-QIRProfile.AZUREADAPTIVE.ll  test_bitreg_as_bit_8-QIRProfile.PYTKET.ll  test_pytket_qir-QIRProfile.ADAPTIVE.ll  test_pytket_qir-QIRProfile.AZUREADAPTIVE.ll  test_pytket_qir-QIRProfile.BASE.ll  test_pytket_qir-QIRProfile.PYTKET.ll  test_pytket_qir_10-QIRProfile.ADAPTIVE.ll  test_pytket_qir_10-QIRProfile.AZUREADAPTIVE.ll  (+179 more)
(+4 files in other folders)
