[project]
name = "pytket-qir"
dynamic = ["version"]
requires-python = ">=3.10,<4.0"

description = "Extension for pytket, providing functions for conversion into to qir."
license = { file = "LICENSE" }
readme = "README.md"
authors = [
    { name = "TKET development team", email = "tket-support@quantinuum.com" }
]
maintainers = [
    { name = "TKET development team", email = "tket-support@quantinuum.com" },
]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pytket >= 2.11.0",
    "pyqir ~= 0.11.1",
]

[project.urls]
documentation = "https://tket.quantinuum.com/extensions/pytket-qir/index.html"
source = "https://github.com/Quantinuum/pytket-qir"
tracker = "https://github.com/Quantinuum/pytket-qir/issues"

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
version = {attr = "pytket.qir._metadata.__extension_version__"}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest ~=9.0",
    "pytest-timeout ~=2.4.0",
    "ruff ~=0.14.11,<0.15",
    "mypy >=1.19.1,<2",
    "hypothesis >=6.150.0,<7",
    "pre-commit >=4.5.1,<5",
    "pyupgrade >=3.21.2,<4.0",
    "requests_mock",
]
